data/all_generated_tests/raw_wast_tests/loop_MismanagementofBlockNesting_578.wast
;; 9. **Incorrect Label Index Handling in Loop with Conditional Exit**:    Develop a loop nested within another loop with a conditional exit via `br_if` that addresses an incorrect label.    Ensures proper handling of label context and correct referencing within nested loop structures.

(assert_invalid
  (module (func $label-index-loop (result i32)
    (loop $outer (result i32)
      (loop $inner (result i32)
        (br_if 1 (i32.const 1))
      )
      (i32.const 0)
    )
  ))
  "label index out of range"
)